# kursovaya_-4

./: .env.example  .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
fixture/: attempts.json  groups.json  messages.json  newsletters.json  recipients.json
messaging/: admin.py  forms.py  mixins.py  models.py  signals.py  tasks.py  urls.py  views.py
messaging/management/commands/: create_manager.py  send_mail.py
messaging/migrations/: 0001_initial.py  0002_alter_client_options_alter_mailing_options_and_more.py  0003_alter_mailing_end_time.py  0005_alter_mailing_status.py  0006_alter_mailing_frequency.py  0007_alter_mailing_options.py  0008_alter_mailing_options.py
messaging/templates/: base.html
messaging/templates/attempts/: attempt_detail.html  attempt_list.html
messaging/templates/messaging/: client_form.html  client_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  message_confirm_delete.html  message_form.html  message_list.html  user_list.html  user_mailings.html
newsletters/: admin.py  forms.py  models.py  services.py  urls.py  views.py
newsletters/migrations/: 0001_initial.py
users/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0002_remove_user_email_confirmed_remove_user_is_blocked_and_more.py  0003_alter_user_options.py  0004_profile.py  0005_profile_country_profile_email.py  0006_alter_user_options.py  0007_alter_user_options_user_is_blocked.py
users/templates/: login.html
(+25 files in other folders)
