[tool.poetry]
name = "mailing-web"
version = "0.1.0"
description = ""
authors = ["Ekaterina <ekaterina.kuz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
login = "^0.0.6"
celery = "^5.5.3"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"